Fix broken tests